# dynamodb-migrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other.yml
.github/workflows/: ci.yml  release.yml
python_app/: .flake8  README.md  requirements.txt  run.py
python_app/core/: README.md  config.py  dynamodb_operations.py  migration_engine.py  state_manager.py  undo_operations.py  user_interface.py
python_app/core/utils/: converters.py  logger.py  template_processor.py  transformations.py
python_app/tests/: test_migration_logic.py  test_templates.py  transformations.py
rust_cli/: Cargo.toml  README.md
rust_cli/app/: README.md  lib.rs
rust_cli/app/aws/: client.rs  mod.rs  operations.rs  types.rs
rust_cli/app/commands/: list.rs  migrate.rs  mod.rs  resume.rs  undo.rs
rust_cli/app/engine/: migration.rs  mod.rs  undo.rs
rust_cli/app/state/: migration_state.rs  mod.rs  undo_state.rs
rust_cli/app/transform/: mod.rs  number_ops.rs  string_ops.rs  template.rs
rust_cli/app/ui/: mod.rs  prompts.rs
rust_cli/wix/: main.wxs
scripts/: install.sh  uninstall.sh
